--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=KoHo:wght@200;400;500;700&display=swap');
+body{
+    background-color: #38424B;
+    font-family: 'KoHo', sans-serif;
+}
