--- a/src/app/alunos/alunos.component.css
+++ b/src/app/alunos/alunos.component.css
@@ -7,11 +7,15 @@ section{
     justify-content: space-around;
     flex-direction: row;
 }
+@media(max-width:700px){
+    section{flex-direction: column;}
+}
 table{
     width: 100%;
     background-color:transparent;
     color: white;
 }
+
 #lista{
     width: 40%;
     text-align: center;
@@ -21,12 +25,20 @@ table{
     color: white;
 }
 #lista .btn{margin: 0 02%;}
+@media(max-width:700px){
+    #lista{width: 90%;margin: 05%;}
+}
+
+
 #cadastre{
     padding: 02%;
     background:linear-gradient(to right,#A959F8,#C062EC,#DC6ADB);
     color: white;
 }
 input{background-color: #713CA6;border:1px solid #4A3B59;}
+@media(max-width:700px){
+    #cadastre{width: 90%;margin: 05%;}
+}
 .buttons{
     margin: 05% 0;
     display: flex;
