--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar bg-dark">
-    <a class="navbar-brand"><h2>Alunos</h2></a>
+    <a class="navbar-brand"><h2>Painel de Alunos</h2></a>
   </nav>
 </header>
 <main>
